CostalCloud/force-app/main/default/objects/Licenses__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Certification_Policy_Number__c</fullName>
        <label>Certification/Policy Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_Document_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certified Document ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certified_Firm__c</fullName>
        <label>Certified Firm</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Certification_State_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certified_Renovator__c</fullName>
        <label>Certified Renovator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Certification_State_Values</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Builder</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>General Contractor</fullName>
                </value>
                <value>
                    <fullName>Home Improvement</fullName>
                </value>
                <value>
                    <fullName>Residential Builder</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <inlineHelpText>May need to delete this field, not applicable on this object?</inlineHelpText>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compliance_Document_ID_18__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compliance Document ID (18)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Date__c</fullName>
        <label>Course Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field_Manager__c</fullName>
        <formula>RFI_Reporting_Market__r.Field_Manager__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Field Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>Jurisdiction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_Key__c</fullName>
        <formula>TEXT( Type__c )
+ &apos;^&apos; + TEXT( Certified_Firm__c )
+ &apos;^&apos; + TEXT( Certified_Renovator__c )
+ &apos;^&apos; + TEXT( City__c )
+ &apos;^&apos; + TEXT( County__c )

/* no longer match by state 
+ &apos;^&apos; + TEXT( State__c )

*/</formula>
        <label>Matching Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RFI_Reporting_Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If left blank will &quot;inherit&quot; the RFI Market assigned to the Installer</inlineHelpText>
        <label>RFI Reporting Market</label>
        <referenceTo>RFI_Reporting_Markets__c</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Resource</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Skill</label>
        <referenceTo>ProfileSkill</referenceTo>
        <relationshipName>Licenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NC</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
                <value>
                    <fullName>NM</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NY</fullName>
                </value>
                <value>
                    <fullName>OH</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Expired Revoke Access</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <formula>Account__r.Store__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Store #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Liability Insurance</fullName>
                </value>
                <value>
                    <fullName>Business License</fullName>
                </value>
                <value>
                    <fullName>Certified Firm</fullName>
                </value>
                <value>
                    <fullName>Certified Renovator</fullName>
                </value>
                <value>
                    <fullName>City Business License</fullName>
                </value>
                <value>
                    <fullName>City Contractor License</fullName>
                </value>
                <value>
                    <fullName>Client Badge</fullName>
                </value>
                <value>
                    <fullName>County Business License</fullName>
                </value>
                <value>
                    <fullName>County Contractor License</fullName>
                </value>
                <value>
                    <fullName>Electrical License</fullName>
                </value>
                <value>
                    <fullName>General Liability Insurance</fullName>
                </value>
                <value>
                    <fullName>Percentage Agreement</fullName>
                </value>
                <value>
                    <fullName>Plumbing License</fullName>
                </value>
                <value>
                    <fullName>RFI EPA RRP Acknowledgment</fullName>
                </value>
                <value>
                    <fullName>Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Skills Assessment</fullName>
                </value>
                <value>
                    <fullName>State Contractor License</fullName>
                </value>
                <value>
                    <fullName>Workmans Comp Documentation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>svcTypeCode__c</fullName>
        <label>svcTypeCode</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tempContactText__c</fullName>
        <label>tempContactText</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compliance Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Certification_Policy_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Client_Store_Licenses</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Certified_Firm__c</columns>
        <columns>Certified_Renovator__c</columns>
        <columns>County__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Licenses__c.Store_Required_License</value>
        </filters>
        <label>Client/Store Licenses</label>
    </listViews>
    <listViews>
        <fullName>Installer_Licenses</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Expiration_Date__c</columns>
        <columns>Certification_Policy_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Licenses__c.Installer_License</value>
        </filters>
        <label>Installer Licenses</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Documents</pluralLabel>
    <recordTypes>
        <fullName>Installer_License</fullName>
        <active>true</active>
        <label>Installer License</label>
    </recordTypes>
    <recordTypes>
        <fullName>Store_Required_License</fullName>
        <active>true</active>
        <label>Store Required License</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Course_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(RecordType.Id = &quot;0124x000000dPJM&quot;), 
ISPICKVAL(  Type__c  ,&quot;Certified Renovator&quot;),
ISBLANK( Course_Date__c )
)</errorConditionFormula>
        <errorDisplayField>Course_Date__c</errorDisplayField>
        <errorMessage>Course date is required when selecting Type of Certified Renovator</errorMessage>
    </validationRules>
</CustomObject>