CostalCloud/force-app/main/default/objects/Licenses__c/validationRules/Course_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
(RecordType.Id = &quot;0124x000000dPJM&quot;), 
ISPICKVAL(  Type__c  ,&quot;Certified Renovator&quot;),
ISBLANK( Course_Date__c )
)</errorConditionFormula>
    <errorDisplayField>Course_Date__c</errorDisplayField>
    <errorMessage>Course date is required when selecting Type of Certified Renovator</errorMessage>
</ValidationRule>