CostalCloud/force-app/main/default/objects/Licenses__c/listViews/Client_Store_Licenses.listView-meta.xml
<ListView>
    <fullName>Client_Store_Licenses</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Type__c</columns>
    <columns>Certified_Firm__c</columns>
    <columns>Certified_Renovator__c</columns>
    <columns>County__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Licenses__c.Store_Required_License</value>
    </filters>
    <label>Client/Store Licenses</label>
</ListView>